// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`trailing_whitespace.php 1`] = `
<?php   
$test = 'string';   
   
$test1 = 'string';   
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$test = 'string';

$test1 = 'string';

`;

exports[`trailing_whitespace_after_tag.php 1`] = `
<?php
$code = true;
?>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$code = true;
?>

`;

exports[`trailing_whitespace_comment.php 1`] = `
<?php
class test{
} // some comment
?>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
class test
{

} // some comment
?>

`;
